--- a/Weather/Screens/Login/LoginView.storyboard
+++ b/Weather/Screens/Login/LoginView.storyboard
@@ -15,40 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJE-F2-M0k">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GJE-F2-M0k">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQM-SZ-tJ1">
-                                        <rect key="frame" x="105.66666666666669" y="286" width="164" height="43"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQM-SZ-tJ1">
+                                        <rect key="frame" x="105" y="316" width="164" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="36"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6tz-W0-6Jf">
-                                        <rect key="frame" x="37.666666666666657" y="485" width="300" height="56"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="4EZ-Rn-bur"/>
-                                            <constraint firstAttribute="height" constant="56" id="fUe-jY-D6k"/>
-                                        </constraints>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6tz-W0-6Jf">
+                                        <rect key="frame" x="38" y="464" width="300" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" textContentType="username"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vsd-V1-Uvr">
-                                        <rect key="frame" x="37.666666666666657" y="565" width="300" height="56"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="56" id="4Yu-Go-qTQ"/>
-                                            <constraint firstAttribute="width" constant="300" id="akg-4M-GJ1"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDJ-L0-0Z5">
-                                        <rect key="frame" x="37.666666666666657" y="697" width="300" height="56"/>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDJ-L0-0Z5">
+                                        <rect key="frame" x="38" y="652" width="300" height="56"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="56" id="T9q-xj-lyz"/>
-                                            <constraint firstAttribute="width" constant="300" id="rb3-QC-yyO"/>
-                                        </constraints>
                                         <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button">
@@ -58,66 +45,49 @@
                                             <action selector="signInButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="xUl-ld-R0p"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uQq-kz-zDy">
-                                        <rect key="frame" x="137" y="767" width="101" height="34.333333333333371"/>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uQq-kz-zDy">
+                                        <rect key="frame" x="38" y="730" width="300" height="27"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Some text">
+                                        <buttonConfiguration key="configuration" style="plain" title="sign up">
+                                            <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                             <color key="baseForegroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="cannotAccessButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="X1B-ze-6rB"/>
+                                            <action selector="signUpButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ezs-iz-igl"/>
                                         </connections>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uXD-ia-jou">
-                                        <rect key="frame" x="81" y="110" width="212" height="128"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="212" id="TNq-Sf-6l2"/>
-                                            <constraint firstAttribute="height" constant="128" id="W3k-df-f7V"/>
-                                        </constraints>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="placeholder" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vsd-V1-Uvr">
+                                        <rect key="frame" x="36" y="552" width="300" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uXD-ia-jou">
+                                        <rect key="frame" x="80" y="118" width="212" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="6tz-W0-6Jf" firstAttribute="leading" secondItem="Vsd-V1-Uvr" secondAttribute="leading" id="0GS-Nj-fPS"/>
-                                    <constraint firstItem="Vsd-V1-Uvr" firstAttribute="top" secondItem="6tz-W0-6Jf" secondAttribute="bottom" constant="24" id="2q4-Ya-TjB"/>
-                                    <constraint firstItem="Vsd-V1-Uvr" firstAttribute="leading" secondItem="qDJ-L0-0Z5" secondAttribute="leading" id="3W3-BZ-jTe"/>
-                                    <constraint firstAttribute="trailing" secondItem="6tz-W0-6Jf" secondAttribute="trailing" constant="51" id="3xS-Qz-5V3"/>
-                                    <constraint firstItem="eQM-SZ-tJ1" firstAttribute="top" secondItem="uXD-ia-jou" secondAttribute="bottom" constant="48" id="9fT-Is-Qaw"/>
-                                    <constraint firstAttribute="bottom" secondItem="uQq-kz-zDy" secondAttribute="bottom" constant="10.666666666666629" id="DGd-nH-y3F"/>
-                                    <constraint firstItem="uXD-ia-jou" firstAttribute="leading" secondItem="6tz-W0-6Jf" secondAttribute="leading" constant="43.333333333333343" id="DkE-Am-zss"/>
-                                    <constraint firstItem="qDJ-L0-0Z5" firstAttribute="centerX" secondItem="uQq-kz-zDy" secondAttribute="centerX" id="FTm-yK-fnS"/>
-                                    <constraint firstItem="b4T-vc-hTQ" firstAttribute="bottom" secondItem="uQq-kz-zDy" secondAttribute="bottom" constant="10.666666666666629" id="XQ4-SN-TK3"/>
-                                    <constraint firstItem="uQq-kz-zDy" firstAttribute="centerX" secondItem="GJE-F2-M0k" secondAttribute="centerX" id="f7G-eP-4L9"/>
-                                    <constraint firstItem="uXD-ia-jou" firstAttribute="top" secondItem="b4T-vc-hTQ" secondAttribute="top" constant="110" id="gZo-RQ-VHr"/>
-                                    <constraint firstItem="uQq-kz-zDy" firstAttribute="top" secondItem="qDJ-L0-0Z5" secondAttribute="bottom" constant="14" id="lbw-HL-Q3g"/>
-                                    <constraint firstItem="eQM-SZ-tJ1" firstAttribute="centerX" secondItem="GJE-F2-M0k" secondAttribute="centerX" id="naC-dH-1PK"/>
-                                    <constraint firstItem="qDJ-L0-0Z5" firstAttribute="top" secondItem="Vsd-V1-Uvr" secondAttribute="bottom" constant="76" id="qR7-Db-o1q"/>
-                                    <constraint firstItem="6tz-W0-6Jf" firstAttribute="top" secondItem="eQM-SZ-tJ1" secondAttribute="bottom" constant="156" id="vOs-9t-vUY"/>
-                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="LNb-0R-rRa"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="b4T-vc-hTQ"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="GJE-F2-M0k" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="7vy-q8-aej"/>
-                            <constraint firstItem="GJE-F2-M0k" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="Jas-os-okF"/>
-                            <constraint firstItem="GJE-F2-M0k" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="qgp-B5-OMO"/>
-                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="cannotAccessButton" destination="uQq-kz-zDy" id="iXg-eQ-GF2"/>
                         <outlet property="logoImageView" destination="uXD-ia-jou" id="41q-sP-ETX"/>
                         <outlet property="passwordTextField" destination="Vsd-V1-Uvr" id="p5M-x5-dgh"/>
                         <outlet property="signInButton" destination="qDJ-L0-0Z5" id="2ea-Ht-Jyn"/>
+                        <outlet property="signUpButton" destination="uQq-kz-zDy" id="iXg-eQ-GF2"/>
                         <outlet property="titleLabel" destination="eQM-SZ-tJ1" id="IVi-EB-ov4"/>
                         <outlet property="usernameTextField" destination="6tz-W0-6Jf" id="mos-nc-czA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="100" y="49.50738916256158"/>
+            <point key="canvasLocation" x="344.80000000000001" y="-47.290640394088669"/>
         </scene>
     </scenes>
 </document>
